[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/portal.gd" type="Script" id=1]
[ext_resource path="res://art/background/portal7.png" type="Texture" id=2]
[ext_resource path="res://art/background/portal1.png" type="Texture" id=3]
[ext_resource path="res://art/background/portal6.png" type="Texture" id=4]
[ext_resource path="res://art/background/portal3.png" type="Texture" id=5]
[ext_resource path="res://art/background/portal2.png" type="Texture" id=6]
[ext_resource path="res://art/background/portal4.png" type="Texture" id=7]
[ext_resource path="res://art/background/portal5.png" type="Texture" id=8]
[ext_resource path="res://scenes/enemies/zoomed_out_enemy_small.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

custom_solver_bias = 0.0
radius = 169.822
height = 94.6984

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -196.571, -22.2682, 0, 0, 0, 0, -118.421, -32.3059, 0, 0, 0, 0, -81.8554, -5.06088, 0, 0, 0, 0, -4.42218, 22.1841, 0, 0, 0, 0, 68.7092, 7.12769, 0, 0, 0, 0, 121.048, -15.8155, 0, 0, 0, 0, 159.048, -39.4756, 0, 0, 0, 0, 214.255, -37.3247, 0, 0, 0, 0, 242.217, -22.2682, 0, 0, 0, 0, 248.67, -5.06088, 0, 0, 0, 0, 248.67, 22.1841, 0, 0, 0, 0, 222.142, 50.1461, 0, 0, 0, 0, 131.803, 83.8439, 0, 0, 0, 0, 45.7661, 103.919, 0, 0, 0, 0, -28.0823, 106.07, 0, 0, 0, 0, -111.251, 64.4856, 0, 0, 0, 0, -167.175, 20.0332, 0, 0, 0, 0, -218.797, 7.84467, 0, 0, 0, 0, -221.665, -12.2306, 0, 0, 0, 0, -196.571, -22.2682 )
}

[sub_resource type="Curve2D" id=4]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -194.938, 88.4778, 0, 0, 0, 0, -137.89, 63.4502, 0, 0, 0, 0, -54.3422, 45.0475, 0, 0, 0, 0, -21.5855, 13.3949, 0, 0, 0, 0, -9.43973, -9.05629, 0, 0, 0, 0, 21.8448, -31.8756, 0, 0, 0, 0, 65.2751, -49.1741, 0, 0, 0, 0, 97.6637, -51.0143, 0, 0, 0, 0, 139.622, -53.5907, 0, 0, 0, 0, 191.517, -60.5837, 0, 0, 0, 0, 228.691, -77.5142, 0, 0, 0, 0, 246.725, -48.0699, 0, 0, 0, 0, 238.628, -8.32019, 0, 0, 0, 0, 210.656, 24.0685, 0, 0, 0, 0, 194.094, 42.1031, 0, 0, 0, 0, 191.517, 63.4502, 0, 0, 0, 0, 174.955, 93.9986, 0, 0, 0, 0, 120.115, 102.832, 0, 0, 0, 0, 68.2195, 76.7001, 0, 0, 0, 0, 30.31, 65.6585, 0, 0, 0, 0, -23.7938, 77.8042, 0, 0, 0, 0, -67.5921, 95.1027, 0, 0, 0, 0, -117.279, 116.082, 0, 0, 0, 0, -165.126, 114.61, 0, 0, 0, 0, -191.626, 105.408, 0, 0, 0, 0, -201.195, 98.0471, 0, 0, 0, 0, -201.195, 92.1583, 0, 0, 0, 0, -194.938, 88.4778 )
}

[sub_resource type="Curve2D" id=5]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -220.538, -63.7213, 0, 0, 0, 0, -173.473, -73.2344, 0, 0, 0, 0, -136.923, -95.7655, 0, 0, 0, 0, -85.8522, -98.7696, 0, 0, 0, 0, -46.7983, -93.262, 0, 0, 0, 0, -18.259, -84.7503, 0, 0, 0, 0, 49.8348, -87.7544, 0, 0, 0, 0, 110.418, -92.2606, 0, 0, 0, 0, 167.998, -97.2675, 0, 0, 0, 0, 218.067, -90.7586, 0, 0, 0, 0, 257.12, -76.2386, 0, 0, 0, 0, 262.628, -47.6992, 0, 0, 0, 0, 204.548, -37.6854, 0, 0, 0, 0, 150.474, -36.1833, 0, 0, 0, 0, 96.8997, -50.7034, 0, 0, 0, 0, 57.8458, -60.2165, 0, 0, 0, 0, -6.74316, -54.7089, 0, 0, 0, 0, -57.8135, -45.6965, 0, 0, 0, 0, -133.918, -25.6689, 0, 0, 0, 0, -186.491, -18.6592, 0, 0, 0, 0, -221.038, -25.6689, 0, 0, 0, 0, -233.556, -46.1972, 0, 0, 0, 0, -237.061, -56.211, 0, 0, 0, 0, -228.549, -63.2206, 0, 0, 0, 0, -220.538, -63.7213 )
}

[sub_resource type="Curve2D" id=6]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -210.524, 51.4374, 0, 0, 0, 0, -195.003, 20.8953, 0, 0, 0, 0, -178.48, 0.867706, 0, 0, 0, 0, -155.949, -18.1585, 0, 0, 0, 0, -126.909, -33.6799, 0, 0, 0, 0, -97.8687, -52.2054, 0, 0, 0, 0, -65.8246, -76.7392, 0, 0, 0, 0, -22.7653, -88.2551, 0, 0, 0, 0, 36.8169, -94.2634, 0, 0, 0, 0, 83.8817, -112.789, 0, 0, 0, 0, 110.919, -126.808, 0, 0, 0, 0, 140.46, -141.829, 0, 0, 0, 0, 177.511, -149.339, 0, 0, 0, 0, 203.547, -145.334, 0, 0, 0, 0, 223.574, -128.31, 0, 0, 0, 0, 237.594, -100.772, 0, 0, 0, 0, 234.089, -78.2413, 0, 0, 0, 0, 225.076, -64.7227, 0, 0, 0, 0, 205.549, -46.6978, 0, 0, 0, 0, 180.515, -30.1751, 0, 0, 0, 0, 140.96, -18.1585, 0, 0, 0, 0, 102.908, -19.1599, 0, 0, 0, 0, 50.8362, -23.6661, 0, 0, 0, 0, 11.2817, -21.1627, 0, 0, 0, 0, -32.2783, -8.14471, 0, 0, 0, 0, -73.8356, 16.3891, 0, 0, 0, 0, -101.874, 43.927, 0, 0, 0, 0, -120.9, 64.956, 0, 0, 0, 0, -143.431, 83.9822, 0, 0, 0, 0, -160.956, 94.4967, 0, 0, 0, 0, -169.467, 95.4981, 0, 0, 0, 0, -188.994, 87.4871, 0, 0, 0, 0, -207.019, 76.4719, 0, 0, 0, 0, -210.524, 62.4525, 0, 0, 0, 0, -210.524, 51.4374 )
}

[sub_resource type="Curve2D" id=7]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -216.032, 26.9036, 0, 0, 0, 0, -142.43, -0.133667, 0, 0, 0, 0, -117.396, -20.662, 0, 0, 0, 0, -61.819, -54.2082, 0, 0, 0, 0, -11.7501, -74.2358, 0, 0, 0, 0, 37.8182, -88.2551, 0, 0, 0, 0, 90.8914, -91.2592, 0, 0, 0, 0, 135.453, -86.2523, 0, 0, 0, 0, 214.562, -83.2482, 0, 0, 0, 0, 262.628, -69.7296, 0, 0, 0, 0, 266.634, -55.2096, 0, 0, 0, 0, 270.138, -36.6841, 0, 0, 0, 0, 271.14, -13.1516, 0, 0, 0, 0, 265.632, 0.367004, 0, 0, 0, 0, 254.116, 12.8842, 0, 0, 0, 0, 236.592, 29.407, 0, 0, 0, 0, 181.516, 38.9201, 0, 0, 0, 0, 125.439, 46.9312, 0, 0, 0, 0, 29.3065, 45.4291, 0, 0, 0, 0, -54.8094, 40.4222, 0, 0, 0, 0, -127.91, 54.9422, 0, 0, 0, 0, -175.976, 66.9588, 0, 0, 0, 0, -202.513, 72.4664, 0, 0, 0, 0, -215.03, 67.4595, 0, 0, 0, 0, -223.041, 53.4402, 0, 0, 0, 0, -226.045, 47.9326, 0, 0, 0, 0, -229.55, 36.4167, 0, 0, 0, 0, -226.546, 28.9063, 0, 0, 0, 0, -216.032, 26.9036 )
}

[sub_resource type="Curve2D" id=8]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -226.546, -13.6523, 0, 0, 0, 0, -192.499, -52.2054, 0, 0, 0, 0, -157.451, -82.2468, 0, 0, 0, 0, -115.393, -106.28, 0, 0, 0, 0, -60.8177, -132.316, 0, 0, 0, 0, -8.24524, -156.85, 0, 0, 0, 0, 87.8873, -171.87, 0, 0, 0, 0, 140.96, -178.379, 0, 0, 0, 0, 171.502, -178.379, 0, 0, 0, 0, 195.035, -168.866, 0, 0, 0, 0, 212.559, -150.341, 0, 0, 0, 0, 218.067, -133.818, 0, 0, 0, 0, 218.067, -122.803, 0, 0, 0, 0, 212.058, -107.782, 0, 0, 0, 0, 203.046, -93.262, 0, 0, 0, 0, 182.518, -75.7379, 0, 0, 0, 0, 156.982, -65.2234, 0, 0, 0, 0, 100.905, -62.7199, 0, 0, 0, 0, 48.8334, -64.7227, 0, 0, 0, 0, 5.27338, -59.7158, 0, 0, 0, 0, -34.2811, -43.6937, 0, 0, 0, 0, -80.3446, -23.6661, 0, 0, 0, 0, -125.407, -3.63852, 0, 0, 0, 0, -157.451, 11.3822, 0, 0, 0, 0, -188.494, 24.4001, 0, 0, 0, 0, -205.016, 25.4015, 0, 0, 0, 0, -212.527, 21.396, 0, 0, 0, 0, -225.545, 12.3836, 0, 0, 0, 0, -233.055, -2.63712, 0, 0, 0, 0, -226.546, -13.6523 )
}

[sub_resource type="Curve2D" id=9]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 254.617, 3.37115, 0, 0, 0, 0, 247.107, 30.9091, 0, 0, 0, 0, 235.591, 48.9339, 0, 0, 0, 0, 207.552, 68.9615, 0, 0, 0, 0, 157.483, 89.9905, 0, 0, 0, 0, 107.915, 94.4967, 0, 0, 0, 0, 38.8196, 77.9739, 0, 0, 0, 0, -19.7611, 71.465, 0, 0, 0, 0, -87.3542, 94.4967, 0, 0, 0, 0, -119.899, 106.513, 0, 0, 0, 0, -180.983, 114.024, 0, 0, 0, 0, -207.019, 105.011, 0, 0, 0, 0, -229.049, 77.9739, 0, 0, 0, 0, -232.554, 45.4291, 0, 0, 0, 0, -230.051, 13.3849, 0, 0, 0, 0, -221.038, -6.14197, 0, 0, 0, 0, -208.521, -18.1585, 0, 0, 0, 0, -178.48, -31.6771, 0, 0, 0, 0, -142.43, -40.1889, 0, 0, 0, 0, -104.378, -48.1999, 0, 0, 0, 0, -66.826, -48.1999, 0, 0, 0, 0, -3.23834, -51.2041, 0, 0, 0, 0, 38.319, -47.6992, 0, 0, 0, 0, 62.8527, -44.1944, 0, 0, 0, 0, 104.41, -35.182, 0, 0, 0, 0, 140.46, -26.1696, 0, 0, 0, 0, 189.027, -18.6592, 0, 0, 0, 0, 206.05, -16.6564, 0, 0, 0, 0, 225.076, -13.6523, 0, 0, 0, 0, 251.613, -13.1516, 0, 0, 0, 0, 256.119, -7.14334, 0, 0, 0, 0, 254.617, 3.37115 )
}

[sub_resource type="Curve2D" id=10]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -226.045, 62.4525, 0, 0, 0, 0, -207.52, 102.508, 0, 0, 0, 0, -168.967, 115.526, 0, 0, 0, 0, -143.431, 118.029, 0, 0, 0, 0, -99.8715, 125.039, 0, 0, 0, 0, -39.288, 130.046, 0, 0, 0, 0, 11.7823, 124.037, 0, 0, 0, 0, 53.3397, 123.537, 0, 0, 0, 0, 108.916, 131.548, 0, 0, 0, 0, 144.966, 131.548, 0, 0, 0, 0, 217.065, 110.018, 0, 0, 0, 0, 252.614, 89.4898, 0, 0, 0, 0, 268.136, 50.436, 0, 0, 0, 0, 269.137, 24.9008, 0, 0, 0, 0, 259.624, 9.37943, 0, 0, 0, 0, 244.102, -3.13782, 0, 0, 0, 0, 219.068, -14.6537, 0, 0, 0, 0, 170.501, -25.1682, 0, 0, 0, 0, 128.944, -26.6702, 0, 0, 0, 0, 100.905, -12.6509, 0, 0, 0, 0, 73.8679, 10.8815, 0, 0, 0, 0, 43.8265, 27.4043, 0, 0, 0, 0, 23.2982, 33.4125, 0, 0, 0, 0, -13.7528, 32.4112, 0, 0, 0, 0, -39.7887, 24.9008, 0, 0, 0, 0, -78.8425, 4.87323, 0, 0, 0, 0, -114.892, -14.6537, 0, 0, 0, 0, -139.927, -21.1627, 0, 0, 0, 0, -163.459, -18.1585, 0, 0, 0, 0, -184.488, -8.14471, 0, 0, 0, 0, -199.008, 0.367004, 0, 0, 0, 0, -211.025, 7.87735, 0, 0, 0, 0, -223.542, 17.8911, 0, 0, 0, 0, -232.554, 31.9105, 0, 0, 0, 0, -226.045, 62.4525 )
}

[node name="portal" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="0"]

scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "default"
frame = 3
playing = true
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 12, 0 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="small_enemy_path1" type="Path2D" parent="." index="2"]

editor/display_folded = true
curve = SubResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="PathFollow2D" type="PathFollow2D" parent="small_enemy_path1" index="0"]

position = Vector2( -196.571, -22.2682 )
rotation = -0.127742
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="small_enemy_path1/PathFollow2D" index="0" instance=ExtResource( 9 )]

[node name="small_enemy_path2" type="Path2D" parent="." index="3"]

editor/display_folded = true
curve = SubResource( 4 )
_sections_unfolded = [ "Visibility" ]

[node name="PathFollow2D" type="PathFollow2D" parent="small_enemy_path2" index="0"]

position = Vector2( -194.938, 88.4778 )
rotation = -0.413426
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="small_enemy_path2/PathFollow2D" index="0" instance=ExtResource( 9 )]

[node name="small_enemy_path3" type="Path2D" parent="." index="4"]

editor/display_folded = true
curve = SubResource( 5 )
_sections_unfolded = [ "Visibility" ]

[node name="PathFollow2D" type="PathFollow2D" parent="small_enemy_path3" index="0"]

position = Vector2( -220.538, -63.7213 )
rotation = -0.199435
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="small_enemy_path3/PathFollow2D" index="0" instance=ExtResource( 9 )]

[node name="small_enemy_path4" type="Path2D" parent="." index="5"]

editor/display_folded = true
curve = SubResource( 6 )
_sections_unfolded = [ "Visibility" ]

[node name="PathFollow2D" type="PathFollow2D" parent="small_enemy_path4" index="0"]

position = Vector2( -210.524, 51.4374 )
rotation = -1.10062
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="small_enemy_path4/PathFollow2D" index="0" instance=ExtResource( 9 )]

[node name="small_enemy_path5" type="Path2D" parent="." index="6"]

editor/display_folded = true
curve = SubResource( 7 )
_sections_unfolded = [ "Visibility" ]

[node name="PathFollow2D" type="PathFollow2D" parent="small_enemy_path5" index="0"]

position = Vector2( -216.032, 26.9036 )
rotation = -0.352039
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="small_enemy_path5/PathFollow2D" index="0" instance=ExtResource( 9 )]

[node name="small_enemy_path6" type="Path2D" parent="." index="7"]

editor/display_folded = true
curve = SubResource( 8 )
_sections_unfolded = [ "Visibility" ]

[node name="PathFollow2D" type="PathFollow2D" parent="small_enemy_path6" index="0"]

position = Vector2( -226.546, -13.6523 )
rotation = -0.84739
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="small_enemy_path6/PathFollow2D" index="0" instance=ExtResource( 9 )]

[node name="small_enemy_path7" type="Path2D" parent="." index="8"]

editor/display_folded = true
curve = SubResource( 9 )
_sections_unfolded = [ "Visibility" ]

[node name="PathFollow2D" type="PathFollow2D" parent="small_enemy_path7" index="0"]

position = Vector2( 254.617, 3.37115 )
rotation = 1.83704
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="small_enemy_path7/PathFollow2D" index="0" instance=ExtResource( 9 )]

[node name="small_enemy_path8" type="Path2D" parent="." index="9"]

editor/display_folded = true
curve = SubResource( 10 )
_sections_unfolded = [ "Visibility" ]

[node name="PathFollow2D" type="PathFollow2D" parent="small_enemy_path8" index="0"]

position = Vector2( -226.045, 62.4525 )
rotation = 1.13761
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="zoomed_out_enemy_small" parent="small_enemy_path8/PathFollow2D" index="0" instance=ExtResource( 9 )]


